# Typor

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/Typor/: error.hpp  utils.hpp
backend/include/Typor/backend/: backend.hpp  database.hpp  instance.hpp
backend/sqlite/: CMakeLists.txt
backend/sqlite/include/Typor/backend/sqlite/: database.hpp  instance.hpp  sqlite.hpp
backend/sqlite/src/: database.cpp  sqlite.cpp
backend/src/: backend.cpp
cmake/: config.cmake
examples/: CMakeLists.txt
examples/src/: main.cpp
frontend/: CMakeLists.txt
frontend/include/Typor/: frontend.hpp
frontend/src/: frontend.cpp
