include(${PROJECT_SOURCE_DIR}/cmake/config.cmake)


set(TYPOR_EXAMPLES_CONFIG_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE TYPOR_EXAMPLES_SOURCE_FILES ${TYPOR_EXAMPLES_CONFIG_SOURCE_DIR}/*.cpp)


set(TYPOR_BACKEND_LIBRARIES)

foreach(BACKEND IN LISTS TYPOR_CONFIG_SUPPORTED_BACKEND)
	string(TOLOWER ${BACKEND} BACKEND)
	list(APPEND TYPOR_BACKEND_LIBRARIES Typor::${BACKEND}_backend)
endforeach()

foreach(EXAMPLE IN LISTS TYPOR_EXAMPLES_SOURCE_FILES)
	get_filename_component(TARGET_NAME ${EXAMPLE} NAME_WE)
	add_executable(${TARGET_NAME} ${EXAMPLE})
	target_link_libraries(${TARGET_NAME} PRIVATE Typor::frontend ${TYPOR_BACKEND_LIBRARIES})
endforeach()
